z-index laying fixed

--- a/app/styles/stylus/ultimate-cube.styl
+++ b/app/styles/stylus/ultimate-cube.styl
@@ -12,7 +12,8 @@
   
   & > .face
     position:absolute
-    background:hsla(200,100%,50%,50%)
-    color:white
+    // background:hsla(200,100%,50%,50%)
+    background:hsla(200,100%,50%,100%)
     will-change:transform
     transform-style:preserve-3d
+    backface-visibility:hidden
